--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ main {
 }
 
 .card-img {
-    background-image: url('../images/illustration-hero.svg');
+    background-image: url('./images/illustration-hero.svg');
     width: 100%;
     background-position: center;
     background-repeat: no-repeat;
